--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=product-service
 server.port=8081
 
 spring.data.mongodb.uri=mongodb://dreBo:Dostoevsky2324@localhost:27017/product-service?authSource=admin
+
+#generate docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
