added loki and prometheus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.data.mongodb.uri=mongodb://dreBo:Dostoevsky2324@localhost:27017/product-s
 #generate docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+
+#loki url
+loki.url=http://localhost:3100/loki/api/v1/push
+
+#->exposed endpoints -> prometheus endpoint allows prometheus to scrape app
+#->gather the metrics in the form of a histogram and send it to prometheus
+#->tag metrics with app name
+management.endpoints.web.exposure.include=health, info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=product-service
