--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ loki.url=http://localhost:3100/loki/api/v1/push
 #->exposed endpoints -> prometheus endpoint allows prometheus to scrape app
 #->gather the metrics in the form of a histogram and send it to prometheus
 #->tag metrics with app name
+#->micrometer tracing by default sends 10% of traces to Tempo -> set to 100%
 management.endpoints.web.exposure.include=health, info, metrics, prometheus
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
+management.tracing.sampling.probability=1.0
